styles/components/base.css
@layer components {
    /* dark theme */
    .dark {
        color-scheme: dark;
    }
    .dark--text {
        @apply text-gray-700 dark:text-[#6D7993];
    }
    .loading {
        @apply fixed inset-0 z-50 flex items-center justify-center;
        @apply bg-gray-300 text-gray-600 backdrop-blur dark:bg-gray-700 dark:text-white;
    }
    .boxed-layout {
        @apply lg:container lg:mx-auto lg:shadow-lg;
    }
    .twilight {
        @apply dark--text h-screen overflow-hidden bg-light-gray dark:bg-dark-secondary;
    }
    .twilight-body {
        @apply flex h-full flex-1 flex-col overflow-y-auto overflow-x-hidden transition-all duration-300 lg:ml-64;
    }
    .collapsible-vertical:not(.toggle-sidebar) .twilight-body {
        @apply lg:ml-[70px];
    }
    .vertical.toggle-sidebar .twilight-body {
        @apply lg:ml-0;
    }
    .twilight-content {
        @apply relative mx-auto h-full bg-light-gray px-6 pb-4 pt-2 dark:bg-dark-secondary dark:text-gray-300 md:pt-4;
        @apply bg-[url('/images/mask.svg')] [mask-image:linear-gradient(0deg,#fff,rgba(255,255,255,1))];
    }

    .app-customizer {
        @apply fixed -right-[400px] bottom-0 top-0 z-[51] w-full max-w-[400px] bg-white p-4 shadow-[5px_0_25px_0_rgba(94,92,154,0.1)] transition-[right] duration-300 dark:bg-[#0e1726];
    }
    .customizer-shadow {
        @apply fixed inset-0 z-[51] hidden bg-[black]/60 px-4 transition-[display] supports-[backdrop-filter]:bg-light-gray/20 supports-[backdrop-filter]:backdrop-blur;
    }
    .customizer-button {
        @apply absolute -left-12 bottom-0 top-0 my-auto flex h-10 w-12 cursor-pointer items-center justify-center rounded-bl-full rounded-tl-full bg-primary text-white;
    }
    .customizer-card {
        @apply mb-3 rounded-md border border-dashed border-[#e0e6ed] p-3 dark:border-[#1b2e4b];
    }

    .text-10 {
        font-size: 0.625rem !important;
    }
    .text-11 {
        font-size: 0.688rem !important;
    }
    .text-13 {
        font-size: 0.813rem !important;
    }
    .text-15 {
        font-size: 0.938rem !important;
    }
    .text-16 {
        font-size: 1rem !important;
    }
    .text-17 {
        font-size: 1.063rem !important;
    }
    .text-19 {
        font-size: 1.188rem !important;
    }
    .text-21 {
        font-size: 1.313rem !important;
    }
    .text-22 {
        font-size: 1.375rem !important;
    }
}

